# serega_cpp

./: CMakeLists.txt  algorithmclass.cpp  algorithmclass.h  big_integer.cpp  big_integer.h  functorclass.cpp  functorclass.h  iteratorsclass.cpp  iteratorsclass.h  listclass.cpp  listclass.h  main.cpp  mainclass.cpp  mainclass.h  multimapclass.cpp  multimapclass.h  patternclass.cpp  patternclass.h  serega.kdev4  setcontainerclass.cpp  setcontainerclass.h  smartpointerclass.cpp  smartpointerclass.h  stringclass.cpp  stringclass.h  toobig.cpp  toobig.h
