project(serega)

add_executable(serega 
		  main.cpp 
		  iteratorsclass.cpp 
		  listclass.cpp
		  setcontainerclass.cpp
		  multimapclass.cpp
		  functorclass.cpp
		  toobig.cpp
		  patternclass.cpp
		  mainclass.cpp
		  smartpointerclass.cpp
		  big_integer.cpp
		  algorithmclass.cpp 
		  stringclass.cpp
	      )

